--- a/hoppscotch/package.json
+++ b/hoppscotch/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "https://Bisrate19.github.io/your-repo-name",
   "name": "hoppscotch",
   "version": "0.1.0",
   "private": true,
@@ -7,9 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-   "predeploy": "next build && next export",
-  "deploy": "gh-pages -d out"
+    "lint": "next lint"
   },
   "dependencies": {
     "lucide-react": "^0.474.0",
@@ -22,7 +19,6 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-icons": "^3.0.0",
-    "gh-pages": "^6.3.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
